packages/web/src/components/admin_page/s3_page/s3.css
.s3-panel-main {
    display: flex;
    flex-direction: column;
}

.s3-upload-image {
    background-color: gray;
    height: 80vh;
    display: flex;
    flex-direction: column;
}

.s3-object-card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background: linear-gradient(rgb(21, 76, 121), rgb(118, 181, 197));
}

.s3-object-card img {
    object-fit: cover;
    width: 20vw;
    height: 20vh;
}

.s3-space-around {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    flex-wrap: wrap;
}

.lds-dual-ring {
    display: inline-block;
    width: 80px;
    height: 80px;
    align-self: center;
}
.lds-dual-ring:after {
    content: ' ';
    display: block;
    width: 64px;
    height: 64px;
    margin: 8px;
    border-radius: 50%;
    border: 6px solid #fff;
    border-color: #fff transparent #fff transparent;
    animation: lds-dual-ring 1.2s linear infinite;
}
@keyframes lds-dual-ring {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

